add more products to db. Add js to add and subtract from bag

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -21,9 +21,7 @@
             <div class="row mb-5">
                 <div class = "col">
                     <form>
-                        <div class="fieldWrapper">
-                            {{ filter.form.popularity |as_crispy_field }}
-                        </div>                        
+                            {{ filter.form }}
                         <button type="submit" class="btn btn-primary">Search</button>
                     </form>
                 </div>
