--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -44,7 +44,30 @@
                                 {% endif %}
                             </td>
                             <td>{{item.inventory.product.price}}</td>
-                            <td>{{item.quantity}}</td>
+                            <td>
+                                <div class="container">
+                                    <div class="col-lg-2">
+                                        <div class="input-group">
+                                            <span class="input-group-btn">
+                                                <button type="button"
+                                                    class="quantity-left-minus btn btn-danger btn-number"
+                                                    data-type="minus" data-field="">
+                                                    <span class="glyphicon glyphicon-minus"></span>
+                                                </button>
+                                            </span>
+                                            <input type="number" id="quantity" name="quantity"
+                                                class="form-control input-number" value="{{item.quantity}}" min="1" max="100">
+                                            <span class="input-group-btn">
+                                                <button type="button"
+                                                    class="quantity-right-plus btn btn-success btn-number"
+                                                    data-type="plus" data-field="">
+                                                    <span class="glyphicon glyphicon-plus"></span>
+                                                </button>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
                             <td>£{{ item.subtotal }}</td>
                         </tr>
                         {% endfor %}
@@ -58,4 +81,9 @@
     </div>
 </div>
 
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+        <script src="{% static 'bag/js/bag.js' %}"></script>
 {% endblock %}
