--- a/templates/base.html
+++ b/templates/base.html
@@ -55,14 +55,9 @@
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Shop</a>
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item"href="{% url 'all_products' %}">All Products</a></li>
-                          <li><a class="dropdown-item" href="{% url 'all_products' %}?category__name__iexact=regs"">Regulators</a></li>
-                          <li><a class="dropdown-item" href="{% url 'all_products' %}?category__name__iexact=bcd"">BCDs</a></li>
-                          <li><a class="dropdown-item" href="{% url 'all_products' %}?category__name__iexact=computer">Computers</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="{% url 'all_products' %}?category__name__iexact=wetsuit">Wetsuits</a></li>
-                          <li><a class="dropdown-item" href="{% url 'all_products' %}?category__name__iexact=drysuit">Drysuits</a></li>
-                          <li><a class="dropdown-item" href="{% url 'all_products' %}?category__name__iexact=mask">Masks</a></li>
-                          <li><a class="dropdown-item" href="{% url 'all_products' %}?category__name__iexact=fins">Fins</a></li>
+                          {% for category in categories %}
+                          <li><a class="dropdown-item" href="{% url 'all_products' %}?category__name__iexact={{category.name}}"">{{category.friendly_name}}</a></li>
+                          {% endfor %}
                           {% if user.is_authenticated %}
                           {% if user.is_staff %}
                           <li><a class="dropdown-item staff" href="{% url 'inventory_list' %}">Manage Inventory</a></li>
