--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -56,7 +56,7 @@
                                                 </button>
                                             </span>
                                             <input type="number" id="quantity" name="quantity"
-                                                class="form-control input-number" value="{{item.quantity}}" min="1" max="100">
+                                                class="form-control input-number" value="{{item.quantity}}" min="1" max="100" data-inventory-count = "{{item.inventory.count}}">
                                             <span class="input-group-btn">
                                                 <button type="button"
                                                     class="quantity-right-plus btn btn-success btn-number"
