add js script for product detail

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -40,7 +40,7 @@
                         </div>
                         <input class="form-control qty_input qty-input input-number" type="number" name="quantity"
                             value="1" min="1" max="{{ variant.count }}" id=" id_qty_{{product.id}} "
-                            data_item_id="{{ product.id }}">
+                            data_item_id="{{ product.id }}" data-sku = >
                         <div class="input-group-append">
                             <span class="input-group-btn">
                                 <button type="button" class="quantity-right-plus btn btn-success btn-number"
