--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,67 +2,79 @@
 {% load static %}
 
 {% block content %}
-<h1>{{ product.name }}</h1>
+
 <h1>{% with product.inventory_set.all as inventory %}</h1>
-<h1>{% for variant in inventory %}</h1>
-<h1>{{ variant.sku }}: {{variant.size}}: {{variant.color}}: {{ variant.count }}</h1>
-{% endfor %}
-
-<h2 style="color:red;">{{product.inventory_set.id}}</h2>
-
 {% if request.user.is_staff %}
 <a href="{% url 'update_product' product.slug %}"> Update product description</a>
 <a href="{% url 'delete_product' product.slug %}"> Delete product</a>
 {% endif %}
 
-<form method="POST" action="{% url 'add_to_bag' product.slug %}">
-    {% csrf_token %}
-    <div class="form-group">
-        <label for="exampleFormControlSelect1">Example select</label>
-        <select name="stockable" class="form-control" id="exampleFormControlSelect1">
-            {% for variant in inventory %}
-            <option name='product_size' class="size-option" value="{{ variant.size }}" data-sku="{{variant.sku}}" 
-                session-quantity = "{% if bag_items %} {% for item in bag_items %} {% if item.inventory.sku == variant.sku %}{{ item.quantity }}{% endif %}{% endfor %}{% endif %}"
-                data-count="{{ variant.count }}">{{variant.size}}</option>
-            {% endfor %}
-        </select>
-        <div class="col-12">
-            <p class="mt-3"><strong>Quantity:</strong></p>
-            <div class="form-group w-50">
-                <div class="input-group">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-btn">
-                                <button type="button" class="quantity-left-minus btn btn-danger btn-number"
-                                    data-type="minus" data-field="">
-                                    <span class="glyphicon glyphicon-minus"></span>
-                                </button>
-                            </span>
-                        </div>
-                        <input class="form-control qty_input qty-input input-number" type="number" name="quantity"
-                            value="1" min="1" max="{{ variant.count }}" id="id_qty"
-                            data_item_id="{{ product.id }}" data-sku = "" >
-                        <div class="input-group-append">
-                            <span class="input-group-btn">
-                                <button type="button" class="quantity-right-plus btn btn-success btn-number"
-                                    data-type="plus" data-field="">
-                                    <span class="glyphicon glyphicon-plus"></span>
-                                </button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <input type="submit" value="Add to Cart" class="btn btn-primary">
-            </div>
-            <input name="sku" value="" id="sku">
-            <input name="redirect_url" value="{{request.path}}">
+<div class="container">
+    <div class="row" style="height:50px;">
+        <div class="col"></div>
+    </div>
+    <div class="row">
+        <div class="col col-md-6">
+            <img class="img-fluid" src="{{product.image.url}}" alt="{{product.name}}">
         </div>
-</form>
-{% endwith %}
+        <div class="col col-md-6">
+            <h1 class="fs-2 mb-4">{{ product.name }}</h1>
+            <h2 class="fs-5 my-3">{{ product.brand | upper }}</h2>
+            <p class="w-lg-75 my-4">{{ product.description }}</p>
+            <form method="POST" action="{% url 'add_to_bag' product.slug %}">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label class="mb-3" for="exampleFormControlSelect1"><strong>Select size:</strong></label>
+                    <select name="stockable" class="form-control w-50" id="exampleFormControlSelect1">
+                        {% for variant in inventory %}
+                        <option name='product_size' class="size-option" value="{{ variant.size }}"
+                            data-sku="{{variant.sku}}"
+                            session-quantity="{% if bag_items %} {% for item in bag_items %} {% if item.inventory.sku == variant.sku %}{{ item.quantity }}{% endif %}{% endfor %}{% endif %}"
+                            data-count="{{ variant.count }}">{{variant.size}}</option>
+                        {% endfor %}
+                    </select>
+                    <p class="mt-3"><strong>Quantity:</strong></p>
+                    <div class="form-group w-25">
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-btn">
+                                        <button type="button"
+                                            class="quantity-left-minus btn btn-secondary bi bi-dash-lg"
+                                            data-type="minus" data-field="">
+                                        </button>
+                                    </span>
+                                </div>
+                                <input class="form-control qty_input qty-input input-number" type="number"
+                                    name="quantity" value="1" min="1" max="{{ variant.count }}" id="id_qty"
+                                    data_item_id="{{ product.id }}" data-sku="">
+                                <div class="input-group-append">
+                                    <span class="input-group-btn">
+                                        <button type="button"
+                                            class="quantity-right-plus btn btn-secondary bi bi-plus-lg" data-type="plus"
+                                            data-field="">
+                                        </button>
+                                    </span>
+                                </div>
+                            </div>
+                        <input type="submit" value="Add to Cart" class="btn btn-primary mt-3">
+                    </div>
+                    <input type="hidden" name="sku" value="" id="sku">
+                    <input type="hidden" name="redirect_url" value="{{request.path}}">
+                </div>
+            </form>
+        </div>
+    </div>
 
-{% endblock %}
+    <h1>{% for variant in inventory %}</h1>
+    <h1>{{ variant.sku }}: {{variant.size}}: {{variant.color}}: {{ variant.count }}</h1>
+    {% endfor %}
 
-{% block postloadjs %}
-{{ block.super }}
-<script src="{% static 'products/js/products.js' %}"></script>
-{% endblock %}
+
+    {% endwith %}
+
+    {% endblock %}
+
+    {% block postloadjs %}
+    {{ block.super }}
+    <script src="{% static 'products/js/products.js' %}"></script>
+    {% endblock %}
