--- a/products/templates/products/create_product.html
+++ b/products/templates/products/create_product.html
@@ -15,7 +15,7 @@
                         {% csrf_token %}
                         {{ form | crispy }}
                         <br>
-                        <button class="btn btn-primary" type="submit">Save</button>
+                        <button class="btn btn-primary ms-auto me-3" type="submit">Save</button><a href="{{ view.get_success_url }}" class="btn btn-secondary">Cancel</a>
                     </form>
                 </div>
             </div>
