--- a/templates/base.html
+++ b/templates/base.html
@@ -106,7 +106,7 @@
                         {% endif %}
                         <!-- Shopping cart link bootstrap icons -->
                         <li class="nav-item">
-                            <a class="nav-link"><i class="bi bi-bag"></i></a>
+                            <a class="nav-link" href = "{% url 'view_bag' %}"><i class="bi bi-bag"></i></a>
                         </li>
                     </ul>
                   </div>
