--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -80,7 +80,7 @@
                                 </form>
                             </td>
                             <td>£{{ item.subtotal }}</td>
-                            <td><i class="bi bi-trash3"></i></td>
+                            <td><a href = "{% url 'remove_from_bag' item.inventory.id %}"><i class="bi bi-trash3"></i></a></td>
                         </tr>
                         {% endfor %}
                     </tbody>
