add delivery and grand total to bag template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,10 +24,10 @@
     <div class="carousel-inner">
         <div class="carousel-item height-85 active">
             <!-- Image Oleksandr Sushko unsplash -->
-            <img src="{% static 'img/home-carousel-1.jpg' %}" class="d-block w-100" alt="dolphins with coral">
+            <img src="{% static 'img/learn-to-scuba-home.jpg' %}" class="d-block w-100" alt="dolphins with coral">
         </div>
         <div class="carousel-item height-85">
-            <img src="{% static 'img/home-carousel-1.jpg' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'img/learn-to-scuba-home-2.jpg' %}" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item height-85">
             <img src="{% static 'img/home-carousel-1.jpg' %}" class="d-block w-100" alt="...">
@@ -49,7 +49,7 @@
     <div class="row d-flex justify-content-around">
         <div class="col-md mt-3">
             <div class="card mx-auto no-border">
-                <img class="card-img-top mx-auto" src="{% static 'img/garbage-home-triple.webp' %}" alt="Learn to dive">
+                <img class="card-img-top mx-auto" src="{% static 'img/learn-to-dive-with-us.jpg' %}" alt="Learn to dive">
                 <div class="card-body">
                   <h5 class="card-title">Learn to Dive</h5>
                   <p class="card-text">Discover Scuba with us...</p>
@@ -57,9 +57,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-md">
+        <div class="col-md mt-md-3">
             <div class="card mx-auto no-border">
-                <img class="card-img-top" src="{% static 'img/garbage-home-triple.webp' %}" alt="Card image cap">
+                <img class="card-img-top" src="{% static 'img/continue-diving-education.jpg' %}" alt="continue diving">
                 <div class="card-body">
                   <h5 class="card-title">Continue your diving</h5>
                   <p class="card-text">Learn diving specialties and niches</p>
@@ -69,7 +69,7 @@
         </div>
         <div class="col-md mt-md-3">
             <div class="card mx-auto no-border">
-                <img class="card-img-top" src="{% static 'img/garbage-home-triple.webp' %}" alt="Card image cap">
+                <img class="card-img-top" src="{% static 'img/gopro.jpg' %}" alt="go pro">
                 <div class="card-body">
                   <h5 class="card-title">Pro Diving Courses</h5>
                   <p class="card-text">Work the dream...</p>
