--- a/templates/base.html
+++ b/templates/base.html
@@ -94,13 +94,15 @@
                     <ul class="navbar-nav me-auto me-lg-1 ms-lg-auto mb-2 mb-lg-0">
                         <!--Use all allauth in django to manage users and authentication-->
                         {% if user.is_authenticated %}
-                            <li class="nav-item lg-align-self-lg-center">
-                                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                            <li class="nav-item align-self-lg-center">
+                              <div class = "d-flex me-2">
+                                <i class="bi bi-person"></i><a class="align-self-center text-reset text-decoration-none" href="{% url 'account_logout' %}">Logout</a>
+                              </div>
                             </li>
                         {% else %}
                             <li class="nav-item align-self-lg-center">
                                 <div class = "d-flex me-2">
-                                    <i class="bi bi-person"></i><a class = "align-self-center" href="{% url 'account_login' %}">Login</a><span class = "align-self-center px-1">or</span><a class = "align-self-center"href="{% url 'account_signup' %}">Register</a>
+                                    <i class="bi bi-person"></i><a class = "align-self-center text-reset text-decoration-none" href="{% url 'account_login' %}">Login</a><span class = "align-self-center px-1 text-reset text-decoration-none">or</span><a class = "align-self-center"href="{% url 'account_signup' %}">Register</a>
                                 </div>
                             </li>
                         {% endif %}
