--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -186,7 +186,7 @@
             </div>
         </div>
     </div>
-<!-- {#    <div class="row">
+    {% comment %}     <!--     <div class="row">
         <div class="col-12 col-lg-7 text-right">
             {% if from_profile %}
                 <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
@@ -203,7 +203,8 @@
                     <span class="text-uppercase">Now check out the latest deals!</span>
                 </a>
             {% endif %}
-        </div>#} -->
+        </div> -->
+        {% endcomment %}
     </div>
 </div>
 {% endblock %}
