update allauth templates for inner_content block

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -41,6 +41,11 @@ input[type=number] {
     z-index: 1000;
 }
 
+/*------------Profile Pages--------------------------------*/
+.vh-90{
+    height:80vh;
+}
+
 /*------------Styling home page ---------------------------*/
 
 .navbar{
