fix profile icon in base html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,6 +19,11 @@
     color: rgba(255,255,255,1);
 }
 
+.dropdown-menu[data-bs-popper].left-auto{
+    left:auto;
+    right:0;
+}
+
 /* ---Hide spinners in number fields (W3Schools)-----------*/
 
 /* Chrome, Safari, Edge, Opera */
