--- a/templates/base.html
+++ b/templates/base.html
@@ -2,81 +2,96 @@
 
 <!doctype html>
 <html lang="en">
-    <head>
-        {% block meta %}
-            <meta http-equiv="X-UA-Compatible" content="ie=edge">
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-            <meta name="description" content="Scubasport, Scuba Diving, Learn to Scuba UK, Shop Scuba Equipment">
-            <meta name="keywords" content="Scuba Equipment, Learn to Scuba Dive, Scuba Diving Near me, Scuba Diving Courses UK, Shop Scuba Equipment, Scuba Equipment Rental, Beginner Scuba Diving, Scuba Diving Lesson Cost, PADI Certification Cost, How do I become a certified diver, how much does it cost to learn to scuba dive, wet suits, dry suits, regulators, fins, masks, snorkels, BCDS, Diving qualifications, become a diving instructor">
-            <meta name="author" content="Daniel Richards">
-        {% endblock %}
-        {% block extra_meta %}
-        {% endblock %}
-        {% block corecss %}
-            <!-- Bootstrap CDN link -->
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-            <link rel="stylesheet" href="{% static 'css/base.css' %}">
-        {% endblock %}
 
-        {% block extra_css %}
-        {% endblock %}
+<head>
+  {% block meta %}
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Scubasport, Scuba Diving, Learn to Scuba UK, Shop Scuba Equipment">
+  <meta name="keywords"
+    content="Scuba Equipment, Learn to Scuba Dive, Scuba Diving Near me, Scuba Diving Courses UK, Shop Scuba Equipment, Scuba Equipment Rental, Beginner Scuba Diving, Scuba Diving Lesson Cost, PADI Certification Cost, How do I become a certified diver, how much does it cost to learn to scuba dive, wet suits, dry suits, regulators, fins, masks, snorkels, BCDS, Diving qualifications, become a diving instructor">
+  <meta name="author" content="Daniel Richards">
+  {% endblock %}
+  {% block extra_meta %}
+  {% endblock %}
+  {% block corecss %}
+  <!-- Bootstrap CDN link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  {% endblock %}
 
-        {% block corejs %}
-            <!-- Font awesome CDN link -->
-            <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
-            <!-- JQuery CDN link -->
-            <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-            <!-- Bootstrap Bundle with Popper -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-            <!-- Stripe -->
-            <script src="https://js.stripe.com/v3/"></script>
-        {% endblock %}
+  {% block extra_css %}
+  {% endblock %}
 
-        {% block extra_js %}
-        {% endblock %}
+  {% block corejs %}
+  <!-- Font awesome CDN link -->
+  <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
+  <!-- JQuery CDN link -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <!-- Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <!-- Stripe -->
+  <script src="https://js.stripe.com/v3/"></script>
+  {% endblock %}
 
-    <title>Scubasport {% block extra_title %}{% endblock %}</title>
-    </head>
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="{% url 'home' %}">Scubasport</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse d-lg-none" id="navbarTogglerDemo02">
-                    <ul class="d-lg-none d-xl-flex navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-                      </li>
-                      <!-- Dropdown menu for shop - bootstrap -->
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Shop</a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item"href="{% url 'all_products' %}">All Products</a></li>
-                          {% for category in categories %}
-                          <li><a class="dropdown-item" href="{% url 'all_products' %}?category__name__iexact={{category.name}}"">{{category.friendly_name}}</a></li>
+  {% block extra_js %}
+  {% endblock %}
+
+  <title>Scubasport {% block extra_title %}{% endblock %}</title>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home' %}">Scubasport</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse d-lg-none" id="navbarTogglerDemo02">
+          <ul class="d-lg-none d-xl-flex navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+            </li>
+            <!-- Dropdown menu for shop - bootstrap -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                aria-expanded="false">Shop</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'all_products' %}">All Products</a></li>
+                {% for category in categories %}
+                <li><a class="dropdown-item" href="{% url 'all_products' %}?category__name__iexact={{category.name}}"">{{category.friendly_name}}</a></li>
                           {% endfor %}
                           {% if user.is_authenticated %}
                           {% if user.is_staff %}
-                          <li><a class="dropdown-item staff" href="{% url 'inventory_list' %}">Manage Inventory</a></li>
-                          {% endif %}
-                          {% endif %}
-                        </ul>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Brands</a>
-                        <ul class="dropdown-menu">
-                          {% for brand in brands %}
-                          <li><a class="dropdown-item"href="{% url 'all_products' %}?brand__name__iexact={{brand.name}}">{{ brand.name | upper }}</a></li>
-                          {% endfor %}
-                        </ul>
-                      </li>
-                      <!-- Dropdown menu for courses -->
-                      <!-- <li class="nav-item dropdown">
+                          <li><a class=" dropdown-item staff" href="{% url 'inventory_list' %}">Manage Inventory</a>
+                </li>
+                {% endif %}
+                {% endif %}
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                aria-expanded="false">Brands</a>
+              <ul class="dropdown-menu">
+                {% for brand in brands %}
+                <li><a class="dropdown-item"
+                    href="{% url 'all_products' %}?brand__name__iexact={{brand.name}}">{{ brand.name | upper }}</a></li>
+                {% endfor %}
+              </ul>
+            </li>
+            <!-- Dropdown menu for courses -->
+            <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Learn to Scuba</a>
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="#">Discover Scuba</a></li>
@@ -87,67 +102,69 @@
                           <li><a class="dropdown-item" href="#">Become a PADI Pro</a></li>
                         </ul>
                       </li> -->
-                    </ul>
-                    <form class="d-none d-lg-flex mx-auto" method="GET" action = "{% url 'search_products' %}">
-                      {% csrf_token %}
-                      <input class="form-control ms-5" name = "q" type="search" placeholder="What are you looking for?" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                    <ul class="navbar-nav me-auto me-lg-1 ms-lg-auto mb-2 mb-lg-0">
-                        <!--Use all allauth in django to manage users and authentication-->
-                        {% if user.is_authenticated %}
-                            <li class="nav-item align-self-lg-center">
-                              <div class = "d-flex me-2">
-                                <i class="bi bi-person"></i><a class="align-self-center text-reset text-decoration-none" href="{% url 'account_logout' %}">Logout</a>
-                              </div>
-                            </li>
-                        {% else %}
-                            <li class="nav-item align-self-lg-center">
-                                <div class = "d-flex me-2">
-                                    <i class="bi bi-person"></i><a class = "align-self-center text-reset text-decoration-none" href="{% url 'account_login' %}">Login</a><span class = "align-self-center px-1 text-reset text-decoration-none">or</span><a class = "align-self-center"href="{% url 'account_signup' %}">Register</a>
-                                </div>
-                            </li>
-                        {% endif %}
-                        <!-- Shopping cart link bootstrap icons -->
-                        <li class="nav-item">
-                            <a class="nav-link" href = "{% url 'view_bag' %}"><i class="bi bi-bag"></i></a>
-                        </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-              <div>
-                <form class="d-lg-none d-flex" method="GET" action="{% url 'search_products' %}">
-                    <input class="form-control me-2" type="search" name="q" placeholder="What are you looking for?" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-        </header>
-        {% if messages %}
-            <div class="message-container">
-              {% for message in messages %}
-                {% include 'includes/success.html' %}
-              {% endfor %}
-            </div>
-        {% endif %}
-    
+          </ul>
+          <form class="d-none d-lg-flex mx-auto" method="GET" action="{% url 'search_products' %}">
+            {% csrf_token %}
+            <input class="form-control ms-5" name="q" type="search" placeholder="What are you looking for?"
+              aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+          <ul class="navbar-nav me-auto me-lg-1 ms-lg-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                aria-expanded="false"><i class="bi bi-person"></i></a>
+              <ul class="dropdown-menu left-auto">
+                {% if user.is_authenticated %}
+                <li><a class="dropdown-item" href="{% url 'profile' %}">My Profile</a></li>
+                <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a></li>
+                {% else %}
+                <li><a class="dropdown-item" href="{% url 'account_login' %}"">Login</a></li>
+                        <li><a class=" dropdown-item staff" href="{% url 'account_signup' %}">Register</a></li>
+                {% endif %}
+            </li>
+            <!-- Shopping cart link bootstrap icons -->
 
-    {% block page_header %}
-    {% endblock %}
-
-    {% block content %}
-    {% endblock %}
-
-    {% block postloadjs %}
-    <script type="text/javascript">
-      var toastElList = [].slice.call(document.querySelectorAll('.toast'))
-      var toastList = toastElList.map(function (toastEl) {
-        return new bootstrap.Toast(toastEl)
-      });
-      toastList.forEach(toast => toast.show());
-    </script>
-    {% endblock %}
+          </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'view_bag' %}"><i class="bi bi-bag"></i></a>
+          </li>
+        </div>
+      </div>
+    </nav>
+    <div>
+      <form class="d-lg-none d-flex" method="GET" action="{% url 'search_products' %}">
+        <input class="form-control me-2" type="search" name="q" placeholder="What are you looking for?"
+          aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </header>
+  {% if messages %}
+  <div class="message-container">
+    {% for message in messages %}
+    {% include 'includes/success.html' %}
+    {% endfor %}
+  </div>
+  {% endif %}
 
 
-  </body>
+  {% block page_header %}
+  {% endblock %}
+
+  {% block content %}
+  {% endblock %}
+
+  {% block postloadjs %}
+  <script type="text/javascript">
+    var toastElList = [].slice.call(document.querySelectorAll('.toast'))
+    var toastList = toastElList.map(function (toastEl) {
+      return new bootstrap.Toast(toastEl)
+    });
+    toastList.forEach(toast => toast.show());
+  </script>
+  {% endblock %}
+
+
+</body>
+
 </html>
